# resume-score

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
notebooks/: demo.ipynb
