[project]
name = "resume-score"
version = "0.0.0"
description = "A Streamlit app to score resumes using a pre-trained model."
readme = "README.md"
repository = "https://github.com/muhammad-fiaz/resume-score.git"
requires-python = ">=3.11"
dependencies = [
    "pygithub>=2.6.1",
    "pypdf2>=3.0.1",
    "requests>=2.32.3",
    "sentence-transformers>=4.1.0",
    "spacy>=3.8.5",
    "streamlit>=1.45.0",
    "transformers>=4.38.0",
    "torch>=2.7.0",
    "torchvision>=0.22.0",
    "torchaudio>=2.7.0",
    "accelerate>=1.6.0",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu128",  marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu128",  marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]



[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
